--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "secret",
+    "username": "xxxxx",
+    "password": "xxxxx",
     "database": "car_control",
     "host": "localhost",
     "dialect": "postgres",
